--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 <body>
   <img src="header.jpg" alt="header">
   <img src="hero.jpg" alt="header">
+  <img src="acustica.jpg" alt="header">
+  <img src="clasica.jpg" alt="header">
 </body>
 </html>
