--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
  <style>
    body{
      margin:0;
+	 border: 10px solid #192b36
    }
    img {
      max-width: 100%;
-	 vertical-align:top;
+	 vertical-align:top;	 
    }
  </style>
 </head>
