--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
  </style>
 </head>
 <body>
-  <img src="header.jpg" alt="header">
-  <img src="hero.jpg" alt="header">
-  <img src="acustica.jpg" alt="header">
-  <img src="clasica.jpg" alt="header">
+  <img src="nueva-version.jpg" alt="header">
 </body>
 </html>
